# PixelForge

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  win_build.bat
docs/: third_party.md
src/: CMakeLists.txt  main.cpp  qml.qrc
src/App/: ApplicationController.cpp  ApplicationController.h  PixelForgeApplication.cpp  PixelForgeApplication.h
src/App/Canvas/: CanvasDocument.cpp  CanvasDocument.h  CanvasProjection.cpp  CanvasProjection.h  Common.cpp  Common.hpp
src/App/Canvas/Object/: BaseObject.cpp  BaseObject.h  CanvasObject.cpp  CanvasObject.h  ImageObject.cpp  ImageObject.h  ObjectTypes.hpp  PathObject.cpp  PathObject.h
src/App/Canvas/Render/: CanvasItem.cpp  CanvasItem.h  CanvasOpenGLUpdateInfoBuilder.cpp  CanvasOpenGLUpdateInfoBuilder.h  CanvasRender.cpp  CanvasRender.h  CanvasRenderer.cpp  CanvasRenderer.h  CanvasTextureTile.cpp  CanvasTextureTile.h  CanvasTileCache.cpp  CanvasTileCache.h  CanvasTypes.hpp  CanvasUpdatesCompressor.cpp  CanvasUpdatesCompressor.h
src/Canvas/: CanvasItem.cpp  CanvasItem.h
src/Common/: QmlTypeRegistration.cpp  QmlTypeRegistration.h
src/GUI/: qml.qrc
src/GUI/qml/: Main.qml
src/Resources/: resources.qrc
src/Resources/Shader/: CanvasTile.frag  CanvasTile.vert
src/Utils/: Logger.cpp  Logger.h  QmlProperty.hpp  QmlTypeRegistration.cpp
src/qml/: Main.qml
test/: CMakeLists.txt
